tests/NormalTests/paczka1/small_fuzzy/61670087.err
Error in line 3: vbU9Sl9 S439 68,2
Error in line 1: RHhy A480 53,5
Error in line 13: vbU9Sl9 A825 -4,3
